--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -1,4 +1,4 @@
-name: Pylint
+name: Pylint and Pytest
 
 on: [push]
 
@@ -18,6 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint websockets
-    - name: Analysing the code with pylint
+    - name: Run pylint and Pytest
       run: |
         pylint src
+        python -m pytest
