--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install websockets pylint pytest pytest_mock
+        pip install websockets pylint pytest pytest-mock pytest-asyncio
     - name: Run pylint and Pytest
       run: |
         pylint src
