--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -17,8 +17,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        make install
     - name: Run pylint and Pytest
       run: |
-        pylint src
-        python3 -m pytest
+        make lint
+        make test
