--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "bluecurrent-api"
-version = "1.0.0"
+version = "1.0.1"
 authors = [
   { name="Floris272", email="florispuijk@outlook.com" },
 ]
 description = "A wrapper for the Blue Current websocket api"
 readme = "README.md"
-license = { file="LICENSE" }
+license = {text = "MIT"}
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Python :: 3",
