--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 websockets
 pytz
+types-pytz
 
 # dev dependencies
 pylint 
@@ -23,10 +24,10 @@ idna==3.3
 imagesize==1.3.0
 Jinja2==3.0.3
 markdown-it-py==1.1.0
-MarkupSafe==2.0.1
-matplotlib==3.5.1
-mdit-py-plugins==0.2.8
-myst-parser==0.15.2
+MarkupSafe==2.1.4
+matplotlib==3.8.2
+mdit-py-plugins>=0.3.4
+myst-parser==1
 packaging==21.3
 Pygments==2.10.0
 pyparsing==3.0.6
@@ -34,7 +35,7 @@ pytz==2021.3
 PyYAML==6.0
 requests==2.26.0
 snowballstemmer==2.2.0
-Sphinx==4.3.0
+Sphinx>=5
 sphinx-rtd-theme==1.0.0
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
