--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,25 +1,29 @@
+# autodoc
+homeassistant>=2024.2.0
+bluecurrent-api
+
 # readthedocs dependencies
 alabaster==0.7.12
-attrs==21.2.0
+attrs
 Babel==2.9.1
 certifi==2021.10.8
 charset-normalizer==2.0.7
-colorama==0.4.4
+colorama
 docutils==0.17.1
 idna==3.3
 imagesize==1.3.0
-Jinja2==3.0.3
-markdown-it-py==1.1.0
+Jinja2
+markdown-it-py
 MarkupSafe==2.1.4
 matplotlib==3.8.2
 mdit-py-plugins>=0.3.4
 myst-parser==1
-packaging==21.3
+packaging
 Pygments==2.10.0
 pyparsing==3.0.6
 pytz==2021.3
-PyYAML==6.0
-requests==2.26.0
+PyYAML
+requests
 snowballstemmer==2.2.0
 Sphinx>=5
 sphinx-rtd-theme==1.0.0
