--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "websockets >= 10.0",
+    "websockets >= 15.0, <16.0.0",
     "pytz >= 2023.4"
 ]
 
