--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,12 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "bluecurrent-api"
-version = "1.2.3"
+version = "1.2.4-dev"
 authors = [
-  { name="Floris272", email="florispuijk@outlook.com" },
+  { name="Floris272", email="florispuijk@outlook.com" }
+]
+maintainers = [
+    {name="jtodorova23", email="juliana.todorova@bluecurrent.nl"}
 ]
 description = "A wrapper for the Blue Current websocket api"
 readme = "README.md"
