--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "bluecurrent-api"
-version = "1.2.4-dev"
+version = "1.2.4"
 authors = [
   { name="Floris272", email="florispuijk@outlook.com" }
 ]
