--- a/.pylintrc
+++ b/.pylintrc
@@ -1,4 +1,3 @@
 [MASTER]
 ignore-patterns=test_*.py
-disable=useless-import-alias
-disable=too-many-public-methods
+disable=useless-import-alias, too-many-public-methods
