--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -17,7 +17,7 @@ markdown-it-py
 MarkupSafe==2.1.4
 matplotlib==3.8.2
 mdit-py-plugins>=0.3.4
-myst-parser==1
+myst-parser>=4.0.1
 packaging
 Pygments==2.10.0
 pyparsing==3.0.6
@@ -25,8 +25,8 @@ pytz==2021.3
 PyYAML
 requests
 snowballstemmer==2.2.0
-Sphinx>=5
-sphinx-rtd-theme==1.0.0
+Sphinx>=7.2.0
+sphinx-rtd-theme>=1.3.0
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.0
