--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -19,7 +19,7 @@ matplotlib==3.8.2
 mdit-py-plugins>=0.3.4
 myst-parser>=4.0.1
 packaging
-Pygments==2.10.0
+Pygments>=2.14
 pyparsing==3.0.6
 pytz==2021.3
 PyYAML
