--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,9 +3,9 @@ homeassistant>=2024.2.0
 bluecurrent-api
 
 # readthedocs dependencies
-alabaster==0.7.12
+alabaster>=0.7.14
 attrs
-Babel==2.9.1
+Babel>=2.13
 certifi==2021.10.8
 charset-normalizer==2.0.7
 colorama
@@ -25,12 +25,12 @@ pytz==2021.3
 PyYAML
 requests
 snowballstemmer==2.2.0
-Sphinx>=7.2.0
+Sphinx>=8.2.3
 sphinx-rtd-theme>=1.3.0
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-applehelp>=1.0.7
+sphinxcontrib-devhelp>=1.0.6
+sphinxcontrib-htmlhelp>=2.0.6
 sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
+sphinxcontrib-qthelp>=1.0.6
+sphinxcontrib-serializinghtml>=1.1.9
 urllib3==1.26.7
